--- a/Index.html
+++ b/Index.html
@@ -74,7 +74,7 @@
         <div id="visit-card">
         <!-- photo / name / title / presentation  -->
             <div id="persona">
-                <img src="https://cdn4.vectorstock.com/i/thumb-large/68/63/sketch-womans-head-with-no-face-and-long-hair-vector-37946863.jpg" alt="Me" id="personaImg">                
+                <img src="images/persona.jpg" alt="Me" id="personaImg">                
             </div>
             
             <div id="visit-card-contents">
