--- a/Index.html
+++ b/Index.html
@@ -18,9 +18,6 @@
     <link href="https://fonts.googleapis.com/css2?family=Aref+Ruqaa&display=swap" rel="stylesheet">
     <!-------------------- SECTION favicon & CSS -------------------->
     <link rel="stylesheet" href="assets/CSS/OnePageCV.css">
-    <!----------------------- SECTION Scripts ----------------------->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js" defer></script>
-    <script src="assets/JS/script.js" defer></script>
 </head>
 
 <body>
@@ -1384,6 +1381,9 @@
         </div>
     </div>
 
+    <!----------------------- SECTION Scripts ----------------------->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+    <script src="assets/JS/script.js"></script>
 </body>
 
 </html>
