--- a/Index.html
+++ b/Index.html
@@ -635,7 +635,7 @@
                     <h4>Intern - Web Developer</h4>
                     <p class="dates">Jun 2022 - Sep 2022</p>
                     <div class="description">
-                        <h5>OVRSEA - France</h5>
+                        <h5>*** - France</h5>
                         <ul>
                             <li>Team working</li>
                             <li>Coding, code-review, documentation</li>
@@ -807,7 +807,7 @@
                     <h4>Stagiaire - Développeuse Web</h4>
                     <p class="dates">Jun 2022 - Sep 2022</p>
                     <div class="description">
-                        <h5>OVRSEA - France</h5>
+                        <h5>*** - France</h5>
                         <ul>
                             <li>Travail en équipe</li>
                             <li>Codage, révision des codes, documentation</li>
@@ -981,7 +981,7 @@
                     <h4>متدربة - برمجة انترنت</h4>
                     <p class="dates">يونيو 2022 - سبتمبر 2022</p>
                     <div class="description">
-                        <h5>OVRSEA - فرنسا</h5>
+                        <h5>*** - فرنسا</h5>
                         <ul>
                             <li>العمل ضمن فريق</li>
                             <li>البرمجة، التحقق من الكود، التوثيق</li>
